exports[`<Menu /> renders children correctly 1`] = `
<ul
  className="sc-dnqmqq sGEvq">
  <li
    className="sc-htoDjs ldSIAh" />
  <span
    collapse={undefined}>
    Child
  </span>
</ul>
`;

exports[`<Menu /> renders correctly with collapse option 1`] = `
<ul
  className="sc-dnqmqq sGEvq">
  <li
    className="sc-htoDjs fJnGXx" />
</ul>
`;

exports[`<Menu /> renders correctly with default options 1`] = `
<ul
  className="sc-dnqmqq sGEvq">
  <li
    className="sc-htoDjs ldSIAh" />
</ul>
`;

exports[`<Menu /> renders correctly with header 1`] = `
<ul
  className="sc-dnqmqq sGEvq">
  <li
    className="sc-htoDjs ldSIAh">
    A Header
  </li>
</ul>
`;

exports[`<Menu /> renders correctly with theme 1`] = `
<ul
  className="sc-dnqmqq sGEvq">
  <li
    className="sc-htoDjs glegaM" />
</ul>
`;
